
ElasticSearch-Carrot2 Change Log

================ ElasticSearch-Carrot2 1.1.0 [unreleased] ================

Bug Fixes

* GH-1: Front-page example visualizations fail with Lingo3G.

Other

* Update base ES dependency to 0.90.2

*  

================ ElasticSearch-Carrot2 1.0.1 ================

Bug Fixes

* GH-1: Front-page example visualizations fail with Lingo3G.

================ ElasticSearch-Carrot2 1.0.0 ================

First open source release.